// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addKey can addKey to empty wallet 1`] = `
Object {
  "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA": Object {
    "encoding": "hex",
    "kid": "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA",
    "notes": "",
    "privateKey": "68be85c3ca96c4f67056e57c1a6d9169734b54ab87ed9a853e349461da0e8c0e",
    "publicKey": "0286cdfebc43519c64baf08017b9f14a66871ee907770e6bc8fcd62282ebc72dc0",
    "tags": Array [
      "Secp256k1VerificationKey2018",
      "did:example:456",
      "A",
    ],
    "type": "assymetric",
  },
}
`;

exports[`addKey can addKey to existing wallet 1`] = `
Object {
  "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA": Object {
    "encoding": "hex",
    "kid": "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA",
    "notes": "",
    "privateKey": "68be85c3ca96c4f67056e57c1a6d9169734b54ab87ed9a853e349461da0e8c0e",
    "publicKey": "0286cdfebc43519c64baf08017b9f14a66871ee907770e6bc8fcd62282ebc72dc0",
    "tags": Array [
      "Secp256k1VerificationKey2018",
      "did:example:456",
      "A",
    ],
    "type": "assymetric",
  },
}
`;

exports[`addKey can addKey to existing wallet 2`] = `
Object {
  "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA": Object {
    "encoding": "hex",
    "kid": "WgGaIZApxh9aeV9K51GfGEMNEkgS6av5boqFZI0QHHA",
    "notes": "",
    "privateKey": "68be85c3ca96c4f67056e57c1a6d9169734b54ab87ed9a853e349461da0e8c0e",
    "publicKey": "0286cdfebc43519c64baf08017b9f14a66871ee907770e6bc8fcd62282ebc72dc0",
    "tags": Array [
      "Secp256k1VerificationKey2018",
      "did:example:456",
      "A",
    ],
    "type": "assymetric",
  },
  "tn9bnG13ice63PtY5Jh4Cg-9-EgfkFkfLO4Z2hI6ZGE": Object {
    "encoding": "hex",
    "kid": "tn9bnG13ice63PtY5Jh4Cg-9-EgfkFkfLO4Z2hI6ZGE",
    "notes": "",
    "privateKey": "00948f44e9e52943d83bd72620d9c79e4533f1d065f57e988bf9b1da1bfd0681",
    "publicKey": "0249b2d0d92622bdf194a2af90f9d166e0dd324aff9b42c8727de90e887d76a4dc",
    "tags": Array [
      "Secp256k1VerificationKey2018",
      "did:example:456",
      "A",
    ],
    "type": "assymetric",
  },
}
`;
